infraestructure/infraestructura.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Infraestructura base: Servidor Web EC2 y Almacenamiento S3'

Resources:

  #Buckets S3
  BucketReportesNetflix:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: !Sub 'netflix-devops-reportes-${AWS::AccountId}'
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true

  BucketArchivosNetflix:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: !Sub 'netflix-devops-archivos-historicos-{AWS::AccountId}'
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true

  #Security Group base
  AppSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Permitir acceso SSH y trafico HTTP/HTTPS para la App'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          Fromport: 443
          Toport: 443
          CidrIP: 0.0.0.0/0

  # 3. Servidor EC2
  ServidorWeb:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      ImageId: ami-098e39bafa7e7303d 
      IamInstanceProfile: 'c209417a5317525l14616717t1w184046022614-SsmRoleInstanceProfile-hp3pWfW3eG7l'
      SecurityGroupIds:
        - !Ref AppSecurityGroup
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 8    
            VolumeType: gp2    
            DeleteOnTermination: true
      # -----------------------------
      Tags:
        - Key: Name
          Value: 'Instancia-Web-Service'
        - Key: WebService
          Value: 'AppNetflix'

Outputs:
  BucketURL:
    Description: 'URL de los buckets creados'
    Value: !GetAtt BucketReportesNetflix.DomainName
    Value: !GetAtt BucketArchivosNetflix.DomainName
  InstanciaIP:
    Description: 'IP Publica de la instancia'
    Value: !GetAtt ServidorWeb.PublicIp
